--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <main class="container">
         <div class="org-section">
             <h2 style="font-family:'Fredoka'; margin-bottom: 10px;">Ayo Lestarikan Budaya!</h2>
-            <p style="font-size: 0.85rem; opacity: 0.9; margin-bottom: 20px;">Kunjungi situs resmi pemerintah untuk informasi lebih dalam.</p>
+            <p style="font-size: 0.85rem; opacity: 0.9; margin-bottom: 20px;">Kunjungi situs resmi untuk informasi lebih dalam.</p>
             <div class="org-grid">
                 <a href="https://iha.kemenbud.go.id/" target="_blank" class="org-card">🏛️ Indonesia Heritage Agency</a>
                 <a href="https://indonesia.go.id/kategori/budaya" target="_blank" class="org-card">🎭 Portal Budaya Indonesia</a>
