--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@ function showUpdateAnnouncement() {
                 <li><b>Fixed Bug:</b> Perbaikan pada sistem pencarian dan duplikasi kartu budaya.</li>
                 <li><b>📲 Share ke WhatsApp:</b> Bagikan info budaya favoritmu langsung ke grup kelas atau teman!</li>
                 <li><b>📋 Salin Info Cepat:</b> Copy deskripsi budaya dalam satu klik untuk tugas sekolah atau catatan.</li>
+<li><b>Fitur Sekolah:</b>🏫 Profil resmi SMP Negeri 2 Cawas terintegrasi Dapodik.</li>
                 <li><b>Max Performance:</b> Loading Wikipedia API kini 2x lebih cepat & ringan.</li>
                 <li><b>Smart Calendar:</b> Sistem otomatis mendeteksi hari besar nasional.</li>
             </ul>
