--- a/index.html
+++ b/index.html
@@ -1825,7 +1825,7 @@ function showBetaDownload() {
                 • Ukuran sangat ringan.
             </div>
 
-            <a href="https://drive.google.com/file/d/1zaH7LPWOU32qF_2GpUuvEeqNYqEbmS0r/view?usp=drivesdk" target="_blank" 
+            <a href="https://www.mediafire.com/file/d0b1y532oi038y9/NusantaraEdu-debug.apk/file" target="_blank" 
                style="display: block; background: var(--primary-green); color: white; text-decoration: none; padding: 15px; border-radius: 50px; font-weight: bold; box-shadow: 0 4px 15px rgba(45, 106, 79, 0.3);">
                 📥 Download APK (v1.0-beta)
             </a>
